hphp/hack/test/typecheck/reactive/rx_class3.php
<?hh
<<__RxLocal>>
trait A {
}
